--- a/tutorial_kb_observable.html
+++ b/tutorial_kb_observable.html
@@ -17,7 +17,7 @@
     <script type="application/javascript" src="vendor/globalize/globalize.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.en-GB.js"></script>
     <script type="application/javascript" src="vendor/globalize/globalize.culture.fr-FR.js"></script>
-    <script type="application/javascript" src="vendor/js/knockback-full-stack-0.20.4.js"></script>
+    <script type="application/javascript" src="vendor/js/knockback-full-stack-1.0.0.js"></script>
     <script type="application/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="./vendor/google-code-prettify/prettify.js"></script>
     <script type="application/javascript" src="./js/stylecode.js"></script>
@@ -94,8 +94,8 @@
             </ul>
             <div class="tab-content">
               <div id="kboo_read_write_view" class="tab-pane active">
-                <pre>&lt;div id=&#39;kboo_read_write&#39;&gt;
-  &lt;input class=&#39;input-small pull-right&#39; data-bind=&quot;value: formatted_number, valueUpdate: &#39;keyup&#39;&quot;/&gt;
+                <pre>&lt;div id='kboo_read_write'&gt;
+  &lt;input class='input-small pull-right' data-bind=&quot;value: formatted_number, valueUpdate: 'keyup'&quot;/&gt;
   &lt;label data-bind=&quot;text: number&quot;&gt;&lt;/label&gt;
 &lt;/div&gt;</pre>
               </div>
@@ -103,31 +103,31 @@
                 <pre data-for="cs">model = new Backbone.Model({number: 33})
 
 ViewModel = (model) -&gt;
-  @number = kb.observable(model, &#39;number&#39;)
+  @number = kb.observable(model, 'number')
   @formatted_number = kb.observable(model, {
-    key:&#39;number&#39;
+    key:'number'
     read: -&gt; return &quot;#: #{@number()}&quot;
     write: (value) -&gt; @number(value.substring(3))
-  }, {}, @)
+  }, @)
   return
 
 view_model = new ViewModel(model)
 
-ko.applyBindings(view_model, $(&#39;#kboo_read_write&#39;)[0])</pre>
+ko.applyBindings(view_model, $('#kboo_read_write')[0])</pre>
                 <pre data-for="js">var model = new Backbone.Model({number: 33});
 
 var ViewModel = function(model) {
-  this.number = kb.observable(model, &#39;number&#39;);
+  this.number = kb.observable(model, 'number');
   this.formatted_number = kb.observable(model, {
-    key: &#39;number&#39;,
+    key: 'number',
     read: function() { return &quot;#: &quot; + (this.number()); },
     write: function(value) { return this.number(value.substring(3)); }
-  }, {}, this);
+  }, this);
 };
 
 var view_model = new ViewModel(model);
 
-ko.applyBindings(view_model, $(&#39;#kboo_read_write&#39;)[0]);</pre>
+ko.applyBindings(view_model, $('#kboo_read_write')[0]);</pre>
               </div>
             </div>
           </div>
@@ -147,11 +147,11 @@ ko.applyBindings(view_model, $(&#39;#kboo_read_write&#39;)[0]);</pre>
         <pre data-for="cs">model = new Backbone.Model({date: new Date()})
 
 view_model =
-  date: kb.observable(model, {key: &#39;date&#39;, localizer: LongDateLocalizer})</pre>
+  date: kb.observable(model, {key: 'date', localizer: LongDateLocalizer})</pre>
         <pre data-for="js">  var model = new Backbone.Model({date: new Date()});
 
   var view_model = {
-    date: kb.observable(model, {key: &#39;date&#39;, localizer: LongDateLocalizer})
+    date: kb.observable(model, {key: 'date', localizer: LongDateLocalizer})
   };</pre><h2 id="create-options-default-value-or-observable-">Create Options: {default: value or observable}</h2>
 <p>You can pass a default function or parameter to provide a value when there is no value available.</p>
 
@@ -163,8 +163,8 @@ view_model =
             </ul>
             <div class="tab-content">
               <div id="kboo_default_view" class="tab-pane active">
-                <pre>&lt;div id=&#39;kboo_default&#39;&gt;
-  &lt;p&gt;Name: &lt;input class=&#39;input-small pull-right&#39; data-bind=&quot;value: name, valueUpdate: &#39;keyup&#39;&quot;/&gt;&lt;/p&gt;
+                <pre>&lt;div id='kboo_default'&gt;
+  &lt;p&gt;Name: &lt;input class='input-small pull-right' data-bind=&quot;value: name, valueUpdate: 'keyup'&quot;/&gt;&lt;/p&gt;
   &lt;p&gt;Name with default: &lt;span data-bind=&quot;text: name_with_default&quot;&gt;&lt;/span&gt;&lt;/p&gt;
 &lt;/div&gt;</pre>
               </div>
@@ -172,23 +172,23 @@ view_model =
                 <pre data-for="cs">model = new Backbone.Model({})
 
 ViewModel = (model) -&gt;
-  @name = kb.observable(model, &#39;name&#39;)
-  @name_with_default = kb.observable(model, {key: &#39;name&#39;, default: &#39;(no name)&#39;})
+  @name = kb.observable(model, 'name')
+  @name_with_default = kb.observable(model, {key: 'name', default: '(no name)'})
   return
 
 view_model = new ViewModel(model)
 
-ko.applyBindings(view_model, $(&#39;#kboo_default_view_model&#39;)[0])</pre>
+ko.applyBindings(view_model, $('#kboo_default_view_model')[0])</pre>
                 <pre data-for="js">var model = new Backbone.Model({});
 
 var ViewModel = function(model) {
-  this.name = kb.observable(model, &#39;name&#39;);
-  this.name_with_default = kb.observable(model, {key: &#39;name&#39;, &quot;default&quot;: &#39;(no name)&#39;});
+  this.name = kb.observable(model, 'name');
+  this.name_with_default = kb.observable(model, {key: 'name', &quot;default&quot;: '(no name)'});
 };
 
 var view_model = new ViewModel(model);
 
-ko.applyBindings(view_model, $(&#39;#kboo_default&#39;)[0]);</pre>
+ko.applyBindings(view_model, $('#kboo_default')[0]);</pre>
               </div>
             </div>
           </div>
